--- a/package.json
+++ b/package.json
@@ -22,9 +22,10 @@
     "hapi-auth-jwt": "2.x.x",
     "hoek": "2.x.x",
     "joi": "5.x.x",
-    "jsonwebtoken": "4.x.x",
+    "jsonwebtoken": "5.x.x",
     "lodash": "3.x.x",
     "omit-empty": "^0.3.0",
+    "request": "^2.55.0",
     "uuid": "2.x.x",
     "vogels": "2.0.0-rc9"
   },
