generating cognito tokens

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,8 @@ server:
     AWS_REGION: us-east-1
     DYNAMODB_ENDPOINT: http://dynamodb-local:8000
     FACEBOOK_APP_SECRET : 2895e93977f23010fdfg428f043791v0
+    COGNITO_IDENTITY_POOL_ID : us-east-1:114c540a-98bb-4396-a2fe-2d1d1ae68bd7
+    COGNITO_DEVELOPER_PROVIDER_NAME : login.clutchretail.cinch
 db:
   image: fitz/dynamodb-local
   command: -inMemory
