--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "joi": "6.x.x",
     "jsonwebtoken": "5.x.x",
     "lodash": "3.x.x",
+    "nodemailer": "^1.3.4",
+    "nodemailer-ses-transport": "^1.3.0",
+    "nodemailer-stub-transport": "^1.0.0",
     "omit-empty": "^0.3.0",
     "request": "^2.55.0",
     "uuid": "2.x.x",
